k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: emotion-backend
  namespace: emotion-detection

spec:

  replicas: 1

  selector:
    matchLabels:
      app: emotion-backend

  template:

    metadata:
      labels:
        app: emotion-backend

    spec:

      containers:

      - name: backend

        image: amankumar03/emotion-detection-backend:v1.0.1

        imagePullPolicy: Always

        ports:

        - containerPort: 8000

        resources:

          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"
