k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: emotion-backend-service

  namespace: emotion-detection


spec:

  selector:

    app: emotion-backend


  ports:

  - protocol: TCP

    port: 8000

    targetPort: 8000


  type: ClusterIP
