k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: emotion-frontend-service

  namespace: emotion-detection


spec:

  selector:

    app: emotion-frontend


  ports:


  - protocol: TCP

    port: 8501

    targetPort: 8501


  type: NodePort
