k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: emotion-detection-ingress
  namespace: emotion-detection

spec:
  ingressClassName: nginx

  rules:
  - host: localhost

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: emotion-frontend-service
            port:
              number: 8501
